--- a/src/App.scss
+++ b/src/App.scss
@@ -23,6 +23,34 @@
   color: #61dafb;
 }
 
+.scales {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+.scales ol {
+    display: flex;
+    padding: 0;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.scale {
+    list-style-type: none;
+    font-weight: bold;
+    padding: 1em;
+    text-align: center;
+    text-transform: uppercase;
+    border: 1px solid #c4c4c4;
+    border-radius: 10px;
+    margin: 5px;
+    cursor: pointer;
+    transition-duration: .4s;
+    min-height: 10em;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
