adding send message

--- a/src/App.scss
+++ b/src/App.scss
@@ -51,7 +51,7 @@
     transition-duration: .4s;
     min-height: 10em;
     &:hover {
-        border:2px solid #000
+        // border:2px solid #000
     }
 }
 
